@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added a LOLCAT module for translating English to LOLCAT.
     * EightBall module rewritten.
     * Fixed a bug in LinkTitle that caused multi-line <title>'s to display
       wrong.
